# semantic-k

./: .env.example  .gitignore  ADVISORY_TOOLS.md  ARCHITECTURE.md  PLUGINS.md  README.md  README_CHAT.md  README_NEW_ARCHITECTURE.md  START_HERE.md  pyproject.toml  requirements.txt  run.py  simple_server.py  start.bat  start.sh  start_server.bat  start_server.sh  test_colored_logging.py  tmp_tail.txt
app/: __init__.py  main.py  router.py
app/advisory_tools/: __init__.py  base_tool.py  intent_classifier.py  security_advisor.py  topic_classifier.py
app/controllers/: __init__.py  chat_controller.py  config_controller.py  session_controller.py  wikipedia_research_controller.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  chat_orchestration_service.py  classification_service.py  config_service.py  context_builder_service.py  llm_service.py  query_refiner_service.py  reranker_service.py  response_strategy_service.py  session_service.py  sse_formatter_service.py  translation_service.py  wiki_intent_service.py  wikipedia_search_service.py  wikipedia_service.py
app/services/chat/: __init__.py  flow_orchestrator_service.py  (+1 more)
app/utils/: __init__.py  colored_logger.py  search_query_builder.py
config/: config.yml
examples/: basic_usage.py  custom_routing.py
frontend/: app.js  index.html  styles.css
server_core/: __init__.py  api.py  classifier.py  clients.py  config.py
server_core/plugins/: __init__.py  base.py  weather.py
src/semantic_k/: __init__.py  api_server.py  semantic_k_app.py
tests/: __init__.py  test_prompt_router.py
(+16 files in other folders)
